@@ -1,3 +1,9 @@
+2013-06-17  Torbjorn Granlund  <tege@gmplib.org>
+
+	* mpn/powerpc64/p6/lshift.asm: Fix typo in label reference.
+	* mpn/powerpc64/p6/rshift.asm: Likewise.
+	* mpn/powerpc64/p6/lshiftc.asm: Likewise.
+
 2013-06-10  Torbjorn Granlund  <tege@gmplib.org>
 
 	* mpn/generic/mu_div_q.c: Remove obsolete comment.
